# spring2026

./: .gitignore  404.html  deploy-to-gh-pages.sh  feed.xml  google.html  index.html  package-lock.json  package.json
activities/: deploy-to-heroku.html  design-systems.html  github.html  intro-css.html  intro-sql-alchemy.html  practice-quiz02a.html  pre-course-assessment.html  quiz01-makeup.html  quiz01.html  quiz02a-makeup.html  quiz02a.html  quiz02b-makeup.html  quiz02b.html  react-activity.html  react-carousel-gallery-from-server.html  react-get-started.html  react-intro-carousel-gallery.html
assets/: main.css  main.css.map
assignments/: hw01.html  hw02.html  hw03.html  hw04.html  hw05.html  hw06.html  index.html  tutorial01.html  tutorial02.html  tutorial03.html  tutorial04.html  tutorial05.html  tutorial06.html  tutorial07.html  tutorial08.html  tutorial09.html  tutorial10.html  tutorial11.html
content/: syllabus.md
lectures/: css_activity.md  css_flex_activity.md  css_grid_activity.md  lecture02.html  lecture03.html  lecture04.html  lecture05.html  lecture06.html  lecture07.html  lecture08.html  lecture09.html  lecture10.html  lecture11.html  lecture12.html  lecture13.html  lecture14.html  lecture15.html  lecture17.html  lecture18.html  lecture19.html  lecture20.html  lecture21.html  lecture22.html  lecture23.html  lecture24.html
public/course-files/tutorials/tutorial09-fastapi/: .gitignore  main.py  pyproject.toml
public/course-files/tutorials/tutorial09-fastapi/templates/: index.html
quizzes/: quiz01.html  quiz02a.html  quiz02b.html  quiz03.html
(+261 files in other folders)
