[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "Poetry + Fast API Exercise"
authors = ["Sarah <svanwart@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["standard"], version = "*"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
